<resources>
    <string name="app_name">Soccer.uz</string>
    <string name="mobile">Mobile</string>
    <string name="business">Business</string>
    <string name="always_check">Always check</string>
    <string name="phoneNumber">Phone number</string>
    <string name="sms">СМС</string>
    <string name="signIn">Sign In</string>
    <string name="top_payments">Top payments</string>
    <string name="last_added">Last added</string>
    <string name="news">Новости</string>
    <string name="see_all">Все</string>
    <string name="get_sms">Get SMS</string>
    <string name="balance">Баланс</string>
    <string name="card_data">Card data</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="notification">Notification</string>
    <string name="sign_off">Sign OFF</string>
    <string name="main">Главная</string>
    <string name="pay">Оплата</string>
    <string name="report">Отчет</string>
    <string name="other">Другие</string>
    <string name="my_cards">Мои карты</string>
    <string name="analize">Аналитика</string>
    <string name="transfer">Трансфер</string>
    <string name="_20_day">20 day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="choose_another_date">Choose another date</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>

    <string name="payee">Payee</string>
    <string name="dateTime">Date and time</string>
    <string name="status">Status</string>
    <string name="account">Account</string>
    <string name="pay_again">Pay again</string>
    <string name="payment">Payment</string>
    <string name="favorite">Favorite</string>
    <string name="choosed_card">Choosed card</string>
    <string name="login">Login</string>
    <string name="category">Категории</string>
    <string name="settings">Настройки</string>
    <string name="try_again">Попробовать еще</string>
    <string name="internet_connection_error">Ошибка подключению к интернету</string>
    <string name="some_word">что то</string>
    <string name="statistics">Статистика</string>
    <string name="matches">Матчы</string>
    <string name="lenta">Лента</string>
    <string name="table">Таблица</string>
    <string name="calendar">Календарь</string>
    <string name="reply">Ответить</string>
    <string name="newComment">Новые</string>
    <string name="popularComment">Популярные</string>
    <string name="comments">Комментарии</string>
    <string name="news_detail">Новость</string>
</resources>
