<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/news"

        android:icon="@drawable/primary_icon_news"
        android:orderInCategory="1"
        android:title="@string/news"
        app:showAsAction="never" />
    <item
        android:id="@+id/matches"

        android:icon="@drawable/primary_icon_soccer"
        android:orderInCategory="1"
        android:title="@string/matches"
        app:showAsAction="never" />
    <item
        android:id="@+id/statistics"

        android:icon="@drawable/primary_icon_analize"
        android:orderInCategory="2"
        android:title="@string/statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/other"

        android:icon="@drawable/primary_icon_settings"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>