<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:text="@string/internet_connection_error"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BodyTextStyle"
            android:text="@string/some_word"
            android:gravity="center_horizontal"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButtonYellow"
            android:text="@string/try_again"
            />
    </LinearLayout>
</RelativeLayout>